Add tripod preference selectors to automatic gear rules

--- a/index.html
+++ b/index.html
@@ -1456,6 +1456,10 @@
                     <option value="none">No selector</option>
                     <option value="monitor">Monitor selector</option>
                     <option value="directorMonitor">Director monitor selector</option>
+                    <option value="tripodHeadBrand">Tripod head selector</option>
+                    <option value="tripodBowl">Tripod bowl selector</option>
+                    <option value="tripodTypes">Tripod type selector</option>
+                    <option value="tripodSpreader">Tripod spreader selector</option>
                   </select>
                 </div>
                 <div class="auto-gear-field" hidden>
@@ -1495,6 +1499,10 @@
                     <option value="none">No selector</option>
                     <option value="monitor">Monitor selector</option>
                     <option value="directorMonitor">Director monitor selector</option>
+                    <option value="tripodHeadBrand">Tripod head selector</option>
+                    <option value="tripodBowl">Tripod bowl selector</option>
+                    <option value="tripodTypes">Tripod type selector</option>
+                    <option value="tripodSpreader">Tripod spreader selector</option>
                   </select>
                 </div>
                 <div class="auto-gear-field" hidden>
