Fix delivery resolution auto gear rules

--- a/index.html
+++ b/index.html
@@ -1166,6 +1166,34 @@
                   ></select>
                 </section>
                 <section
+                  id="autoGearCondition-deliveryResolution"
+                  class="auto-gear-condition"
+                  data-condition="deliveryResolution"
+                  hidden
+                  aria-hidden="true"
+                >
+                  <div class="auto-gear-condition-header">
+                    <label for="autoGearDeliveryResolution" id="autoGearDeliveryResolutionLabel"
+                      >Delivery resolution</label
+                    >
+                    <div class="auto-gear-condition-actions">
+                      <button type="button" class="auto-gear-condition-add" data-action="add">Add</button>
+                      <button
+                        type="button"
+                        class="auto-gear-condition-remove"
+                        data-action="remove"
+                        data-condition="deliveryResolution"
+                      >Remove</button>
+                    </div>
+                  </div>
+                  <select
+                    id="autoGearDeliveryResolution"
+                    class="auto-gear-delivery auto-gear-multiselect"
+                    multiple
+                    size="10"
+                  ></select>
+                </section>
+                <section
                   id="autoGearCondition-mattebox"
                   class="auto-gear-condition"
                   data-condition="mattebox"
