--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,7 @@
                     <option value="mattebox">Mattebox options</option>
                     <option value="cameraHandle">Camera handles</option>
                     <option value="viewfinderExtension">Viewfinder extension</option>
+                    <option value="deliveryResolution">Delivery resolution</option>
                     <option value="videoDistribution">Video distribution</option>
                     <option value="camera">Camera</option>
                     <option value="monitor">Onboard monitor</option>
@@ -1241,6 +1242,34 @@
                   <select
                     id="autoGearViewfinderExtension"
                     class="auto-gear-viewfinder-extension auto-gear-multiselect"
+                    multiple
+                    size="10"
+                  ></select>
+                </section>
+                <section
+                  id="autoGearCondition-deliveryResolution"
+                  class="auto-gear-condition"
+                  data-condition="deliveryResolution"
+                  hidden
+                  aria-hidden="true"
+                >
+                  <div class="auto-gear-condition-header">
+                    <label for="autoGearDeliveryResolution" id="autoGearDeliveryResolutionLabel"
+                      >Delivery resolution</label
+                    >
+                    <div class="auto-gear-condition-actions">
+                      <button type="button" class="auto-gear-condition-add" data-action="add">Add</button>
+                      <button
+                        type="button"
+                        class="auto-gear-condition-remove"
+                        data-action="remove"
+                        data-condition="deliveryResolution"
+                      >Remove</button>
+                    </div>
+                  </div>
+                  <select
+                    id="autoGearDeliveryResolution"
+                    class="auto-gear-delivery-resolution auto-gear-multiselect"
                     multiple
                     size="10"
                   ></select>
