Finalize monitor default integration

--- a/index.html
+++ b/index.html
@@ -1020,6 +1020,38 @@
       >
         <h3 id="autoGearHeading">Automatic Gear Rules</h3>
         <p id="autoGearDescription" class="settings-hint"></p>
+        <section
+          id="autoGearMonitorDefaultsSection"
+          class="auto-gear-defaults"
+          aria-labelledby="autoGearMonitorDefaultsHeading"
+        >
+          <h4 id="autoGearMonitorDefaultsHeading">Monitor defaults</h4>
+          <p id="autoGearMonitorDefaultsDescription" class="auto-gear-defaults-description">
+            Choose the monitors that should be preselected for new gear lists.
+          </p>
+          <div class="auto-gear-default-grid">
+            <div class="auto-gear-field">
+              <label for="autoGearDefaultFocusMonitor" id="autoGearDefaultFocusMonitorLabel">Focus monitor</label>
+              <select id="autoGearDefaultFocusMonitor"></select>
+            </div>
+            <div class="auto-gear-field">
+              <label for="autoGearDefaultHandheldMonitor" id="autoGearDefaultHandheldMonitorLabel">
+                7" handheld monitor
+              </label>
+              <select id="autoGearDefaultHandheldMonitor"></select>
+            </div>
+            <div class="auto-gear-field">
+              <label for="autoGearDefaultComboMonitor" id="autoGearDefaultComboMonitorLabel">Combo monitor 15-21"</label>
+              <select id="autoGearDefaultComboMonitor"></select>
+            </div>
+            <div class="auto-gear-field">
+              <label for="autoGearDefaultDirectorMonitor" id="autoGearDefaultDirectorMonitorLabel">
+                Director monitor 15-21"
+              </label>
+              <select id="autoGearDefaultDirectorMonitor"></select>
+            </div>
+          </div>
+        </section>
         <div id="autoGearPresetPanel" class="auto-gear-preset-panel">
           <p id="autoGearPresetDescription" class="settings-hint"></p>
           <div class="auto-gear-preset-row">
