Align help docs with gear list output label

--- a/index.html
+++ b/index.html
@@ -2345,7 +2345,7 @@
                 href="#generateGearListBtn"
                 data-help-target="#generateGearListBtn"
                 data-help-highlight="#setup-manager"
-              ><strong>Generate Gear List</strong></a>
+              ><strong>Generate Gear List and Project Requirements</strong></a>
               and
               <a
                 class="help-link button-link"
@@ -3337,16 +3337,16 @@
               >Project Requirements summary</a>
               beside the gear list.
             </li>
-              <li>
-                The information is saved with the project, included in printed overviews and ready to populate the
-                <a
-                  class="help-link button-link"
-                  href="#generateGearListBtn"
-                  data-help-target="#generateGearListBtn"
-                  data-help-highlight="#setup-manager"
-                >Generate Gear List</a>
-                dialog as soon as the requirements are ready.
-              </li>
+            <li>
+              The information is saved with the project, included in printed overviews and ready to populate the
+              <a
+                class="help-link button-link"
+                href="#generateGearListBtn"
+                data-help-target="#generateGearListBtn"
+                data-help-highlight="#setup-manager"
+              >Generate Gear List and Project Requirements</a>
+              dialog as soon as the requirements are ready.
+            </li>
             </ul>
         </section>
         <section
@@ -3356,16 +3356,16 @@
         >
           <h3><span class="help-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE467;</span>Gear List</h3>
               <ul>
-                <li>
-                  The
-                  <a
-                    class="help-link button-link"
-                    href="#generateGearListBtn"
-                    data-help-target="#generateGearListBtn"
-                    data-help-highlight="#setup-manager"
-                  ><strong>Generate Gear List</strong></a>
-                  button expands every selected device and project detail into a rich table grouped by category and quantity.
-                </li>
+            <li>
+              The
+              <a
+                class="help-link button-link"
+                href="#generateGearListBtn"
+                data-help-target="#generateGearListBtn"
+                data-help-highlight="#setup-manager"
+              ><strong>Generate Gear List and Project Requirements</strong></a>
+              button expands every selected device and project detail into a rich table grouped by category and quantity.
+            </li>
               <li>Any change to devices, lenses, batteries or project information rebuilds the list so it always reflects the current configuration.</li>
               <li>The generator assembles the table step&nbsp;by&nbsp;step:
                 <ol>
