Improve help guidance for data safety

--- a/index.html
+++ b/index.html
@@ -3051,6 +3051,16 @@
               device until you export it.
             </li>
             <li>
+              Every project entry auto-saves locally after major edits, and clicking
+              <a
+                class="help-link button-link"
+                href="#saveSetupBtn"
+                data-help-target="#saveSetupBtn"
+                data-help-highlight="#setup-manager"
+              ><strong>Save</strong></a>
+              writes a fresh snapshot instantly—perfect before closing a browser tab or heading into a shoot.
+            </li>
+            <li>
               Installing the app from the
               <a
                 class="help-link button-link"
@@ -3100,6 +3110,16 @@
               so every dataset has an offline copy.
             </li>
             <li>
+              Before restoring, open the
+              <a
+                class="help-link button-link"
+                href="#restoreRehearsalButton"
+                data-help-target="#restoreRehearsalButton"
+                data-help-highlight="#settingsDialog"
+              ><strong>Restore rehearsal</strong></a>
+              workspace to verify a backup in isolation while the live planner stays untouched.
+            </li>
+            <li>
               Follow the
               <a
                 class="help-link"
@@ -3110,6 +3130,71 @@
               whenever you migrate to another computer or profile to confirm nothing is left behind.
             </li>
           </ul>
+          <div
+            id="helpDataProtectionChecklist"
+            class="help-callout"
+            role="note"
+            aria-label="Data safety checklist"
+          >
+            <h4>Routine data safety checklist</h4>
+            <ol>
+              <li>
+                Capture a manual
+                <a
+                  class="help-link button-link"
+                  href="#saveSetupBtn"
+                  data-help-target="#saveSetupBtn"
+                  data-help-highlight="#setup-manager"
+                ><strong>Save</strong></a>
+                whenever you finish a planning session or before switching devices.
+              </li>
+              <li>
+                Download a full-app
+                <a
+                  class="help-link button-link"
+                  href="#backupSettings"
+                  data-help-target="#backupSettings"
+                  data-help-highlight="#settingsDialog"
+                ><strong>Backup</strong></a>
+                and a project-level
+                <a
+                  class="help-link button-link"
+                  href="#shareSetupBtn"
+                  data-help-target="#shareSetupBtn"
+                  data-help-highlight="#setup-manager"
+                ><strong>Export project</strong></a>
+                to keep redundant copies offline.
+              </li>
+              <li>
+                Use
+                <a
+                  class="help-link button-link"
+                  href="#restoreRehearsalButton"
+                  data-help-target="#restoreRehearsalButton"
+                  data-help-highlight="#settingsDialog"
+                ><strong>Restore rehearsal</strong></a>
+                to confirm each archive loads correctly before running
+                <a
+                  class="help-link button-link"
+                  href="#restoreSettings"
+                  data-help-target="#restoreSettings"
+                  data-help-highlight="#settingsDialog"
+                ><strong>Restore</strong></a>
+                or
+                <a
+                  class="help-link button-link"
+                  href="#factoryResetButton"
+                  data-help-target="#factoryResetButton"
+                  data-help-highlight="#settingsDialog"
+                ><strong>Factory reset</strong></a>
+                so nothing important gets overwritten.
+              </li>
+              <li>
+                Keep exported files in multiple locations—an on-set laptop, an encrypted drive and your studio archive—to guard
+                against device loss.
+              </li>
+            </ol>
+          </div>
           <div
             id="offlineTransferChecklist"
             class="help-callout"
