Ensure camera weight condition selectable and update docs

--- a/index.html
+++ b/index.html
@@ -1141,6 +1141,7 @@
                     <option value="deliveryResolution">Delivery resolution</option>
                     <option value="videoDistribution">Video distribution</option>
                     <option value="camera">Camera</option>
+                    <option value="cameraWeight">Camera weight</option>
                     <option value="monitor">Onboard monitor</option>
                     <option value="crewPresent">Crew present</option>
                     <option value="crewAbsent">Crew absent</option>
