Document export toggle in help and guides

--- a/index.html
+++ b/index.html
@@ -2764,7 +2764,14 @@
                 data-help-highlight="#setup-manager"
               ><strong>Export project</strong></a>
               downloads a portable JSON bundle with devices, requirements, automatic gear rules and runtime feedback so you can
-              archive or share the setup safely offline using your own storage or transfer tools.
+              archive or share the setup safely offline using your own storage or transfer tools. Toggle
+              <a
+                class="help-link"
+                href="#shareIncludeAutoGearLabel"
+                data-help-target="#shareIncludeAutoGearLabel"
+                data-help-highlight="#setup-manager"
+              ><em>Include automatic gear rules</em></a>
+              to decide whether your automation travels with the export or stays on this device.
             </li>
             <li>
               Use the
