feat(auto-gear): add draft impact preview and warnings

--- a/index.html
+++ b/index.html
@@ -1699,6 +1699,17 @@
               <ul id="autoGearRemoveList" class="auto-gear-item-list"></ul>
             </div>
           </div>
+          <div id="autoGearDraftImpact" class="auto-gear-draft-impact" aria-live="polite">
+            <div class="auto-gear-impact-header">
+              <h4 id="autoGearDraftImpactHeading">Draft impact preview</h4>
+              <p id="autoGearDraftImpactDescription" class="settings-hint"></p>
+            </div>
+            <ul id="autoGearDraftImpactList" class="auto-gear-impact-list"></ul>
+            <div id="autoGearDraftWarningContainer" class="auto-gear-impact-warnings" hidden>
+              <h5 id="autoGearDraftWarningHeading">Warnings</h5>
+              <ul id="autoGearDraftWarningList"></ul>
+            </div>
+          </div>
           <div class="button-row">
             <button type="button" id="autoGearSaveRule"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF207;</span>Save rule</button>
             <button type="button" id="autoGearCancelEdit"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF131;</span>Cancel</button>
