Document iOS storage separation in install help

--- a/index.html
+++ b/index.html
@@ -3133,8 +3133,16 @@
                 href="#installGuideDialog"
                 data-help-target="#installGuideDialog"
               >install guide</a>
-              uses the same database as the browser tab, so projects, backups, favorites and automatic gear rules stay in sync
-              offline across both entry points.
+              shares the same database as the browser tab on desktop and Android, keeping projects, backups, favorites and
+              automatic gear rules in sync offline across both entry points. On iOS/iPadOS Safari, Home Screen installs start in
+              a separate storage space—open
+              <a
+                class="help-link button-link"
+                href="#iosPwaHelpTitle"
+                data-help-target="#iosPwaHelpTitle"
+                data-help-highlight="#iosPwaHelpTitle"
+              ><strong>Keep your data when installing on iOS</strong></a>
+              before migrating to copy everything safely.
             </li>
             <li>
               After reconnecting, choose
