Document manual download fallback in help

--- a/index.html
+++ b/index.html
@@ -2874,6 +2874,12 @@
               add extra insurance without disrupting your workflow.
             </li>
             <li>
+              If your browser blocks automatic downloads, the planner opens a Manual download tab with the JSON payload so you
+              can still capture it. Press <kbd>Ctrl</kbd>+<kbd>A</kbd> then <kbd>Ctrl</kbd>+<kbd>C</kbd> (<kbd>⌘</kbd>+<kbd>A</kbd>,
+              <kbd>⌘</kbd>+<kbd>C</kbd> on macOS) and paste the contents into a <code>.json</code> file stored with your backups
+              before closing the tab.
+            </li>
+            <li>
               After each major milestone, run through the
               <a
                 class="help-link"
