Improve help coverage for automatic gear backups

--- a/index.html
+++ b/index.html
@@ -3685,7 +3685,19 @@
                 Background automatic backups capture rule changes every 10 minutes. Toggle
                 <a class="help-link button-link" href="#autoGearShowBackups" data-help-target="#autoGearShowBackups"><strong>Show automatic
                     backups</strong></a>
-                to reveal the timeline inside Automatic Gear Rules.
+                to reveal the timeline inside Automatic Gear Rules; when you hide it again the status notice under the toggle confirms
+                snapshots are still running in the background and how many entries remain so you can bring them back before restoring.
+              </li>
+              <li>
+                Tune the
+                <a
+                  class="help-link button-link"
+                  href="#autoGearBackupRetention"
+                  data-help-target="#autoGearBackupRetention"
+                  data-help-highlight="#autoGearBackupsSection"
+                ><strong>Backup retention</strong></a>
+                field to decide how many automatic snapshots stay available on this device. The live summary warns before trimming older
+                versions so you can export rule sets you still need.
               </li>
               <li>
                 When backups are visible, pick a timestamped snapshot from the
