--- a/index.html
+++ b/index.html
@@ -208,19 +208,32 @@
           <option value="">-- New Project --</option>
         </select>
       </div>
-      <button id="deleteSetupBtn" title="Delete selected project">
+      <button
+        id="deleteSetupBtn"
+        title="Delete selected project"
+        data-feature-search="true"
+        data-feature-search-keywords="delete remove project clear"
+      >
         <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF254;</span>Delete
       </button>
     </div>
     <div class="form-row">
       <label for="setupName" id="setupNameLabel">Project Name:</label>
       <input type="text" id="setupName" placeholder="Project name" aria-labelledby="setupNameLabel" />
-      <button id="saveSetupBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF207;</span>Save</button>
+      <button
+        id="saveSetupBtn"
+        data-feature-search="true"
+        data-feature-search-keywords="save project store backup autosave offline"
+      ><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF207;</span>Save</button>
     </div>
     <div class="form-row form-row-actions" role="group" aria-label="Project actions">
       <span class="form-label-spacer" aria-hidden="true"></span>
       <div class="form-actions">
-        <button id="shareSetupBtn">
+        <button
+          id="shareSetupBtn"
+          data-feature-search="true"
+          data-feature-search-keywords="export share download backup archive"
+        >
           <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE7AB;</span>
           Export Project
         </button>
@@ -234,7 +247,11 @@
             tabindex="-1"
             class="visually-hidden"
           />
-          <button id="applySharedLinkBtn">
+          <button
+            id="applySharedLinkBtn"
+            data-feature-search="true"
+            data-feature-search-keywords="import project load restore file"
+          >
             <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE7C7;</span>
             Import Project
           </button>
@@ -245,11 +262,20 @@
     <div class="form-row form-row-actions" role="group" aria-label="Project exports">
       <span class="form-label-spacer" aria-hidden="true"></span>
       <div class="form-actions">
-        <button id="generateOverviewBtn">
+        <button
+          id="generateOverviewBtn"
+          data-feature-search="true"
+          data-feature-search-keywords="overview summary pdf print report"
+        >
           <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF1F5;</span>
           Generate Overview
         </button>
-        <button id="generateGearListBtn" type="button">
+        <button
+          id="generateGearListBtn"
+          type="button"
+          data-feature-search="true"
+          data-feature-search-keywords="gear list requirements export print"
+        >
           <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE467;</span>
           Generate Gear List and Project Requirements
         </button>
@@ -1801,6 +1827,8 @@
               class="inline-form-button"
               aria-expanded="false"
               aria-controls="backupDiffSection"
+              data-feature-search="true"
+              data-feature-search-keywords="compare backups versions diff changes log"
             >
               Compare versions
             </button>
@@ -1840,7 +1868,14 @@
             ></textarea>
           </div>
           <div class="button-row diff-actions">
-            <button type="button" id="backupDiffExport">Export log</button>
+            <button
+              type="button"
+              id="backupDiffExport"
+              data-feature-search="true"
+              data-feature-search-keywords="export log backup diff report"
+            >
+              Export log
+            </button>
             <button type="button" id="backupDiffClose">Close</button>
           </div>
         </section>
@@ -1855,11 +1890,35 @@
             Create complete archives, rehearse restores in a sandbox, or reset the planner safely.
           </p>
           <div class="button-row full-backup-actions">
-            <button id="backupSettings">Backup</button>
+            <button
+              id="backupSettings"
+              data-feature-search="true"
+              data-feature-search-keywords="backup download archive safety full"
+            >
+              Backup
+            </button>
             <input type="file" id="restoreSettingsInput" accept="application/json" hidden />
-            <button id="restoreSettings">Restore</button>
-            <button id="restoreRehearsalButton">Restore rehearsal</button>
-            <button id="factoryResetButton">Factory reset</button>
+            <button
+              id="restoreSettings"
+              data-feature-search="true"
+              data-feature-search-keywords="restore recover backup import full"
+            >
+              Restore
+            </button>
+            <button
+              id="restoreRehearsalButton"
+              data-feature-search="true"
+              data-feature-search-keywords="restore rehearsal sandbox verify test backup"
+            >
+              Restore rehearsal
+            </button>
+            <button
+              id="factoryResetButton"
+              data-feature-search="true"
+              data-feature-search-keywords="factory reset clear wipe safety backup"
+            >
+              Factory reset
+            </button>
           </div>
           <section
             id="restoreRehearsalSection"
@@ -1899,7 +1958,14 @@
             <div class="form-row restore-rehearsal-file">
               <label for="restoreRehearsalInput" id="restoreRehearsalFileLabel">Select file</label>
               <input type="file" id="restoreRehearsalInput" accept="application/json" hidden />
-              <button type="button" id="restoreRehearsalBrowse">Choose file</button>
+              <button
+                type="button"
+                id="restoreRehearsalBrowse"
+                data-feature-search="true"
+                data-feature-search-keywords="choose file select backup import"
+              >
+                Choose file
+              </button>
               <p id="restoreRehearsalFileName" class="settings-hint" aria-live="polite">
                 No file selected yet.
               </p>
@@ -1932,8 +1998,22 @@
               <ul id="restoreRehearsalRuleList" class="diff-list"></ul>
             </section>
             <div id="restoreRehearsalActions" class="button-row restore-rehearsal-actions" hidden>
-              <button type="button" id="restoreRehearsalProceed">Continue rehearsal restore</button>
-              <button type="button" id="restoreRehearsalAbort">Abort rehearsal</button>
+              <button
+                type="button"
+                id="restoreRehearsalProceed"
+                data-feature-search="true"
+                data-feature-search-keywords="apply rehearsal restore commit backup"
+              >
+                Continue rehearsal restore
+              </button>
+              <button
+                type="button"
+                id="restoreRehearsalAbort"
+                data-feature-search="true"
+                data-feature-search-keywords="abort rehearsal restore cancel backup"
+              >
+                Abort rehearsal
+              </button>
             </div>
           </section>
         </section>
