--- a/index.html
+++ b/index.html
@@ -1170,6 +1170,23 @@
             Clear filters
           </button>
         </div>
+        <section
+          id="autoGearSummary"
+          class="auto-gear-summary"
+          aria-labelledby="autoGearSummaryHeading"
+          hidden
+        >
+          <div class="auto-gear-summary-header">
+            <h4 id="autoGearSummaryHeading">Rule coverage overview</h4>
+            <p id="autoGearSummaryDescription" class="settings-hint"></p>
+          </div>
+          <div id="autoGearSummaryCards" class="auto-gear-summary-grid"></div>
+          <div
+            id="autoGearSummaryDetails"
+            class="auto-gear-summary-details"
+            aria-live="polite"
+          ></div>
+        </section>
         <div id="autoGearRulesList" class="auto-gear-rules" aria-live="polite"></div>
         <div id="autoGearEditor" class="auto-gear-editor" hidden aria-hidden="true">
           <div class="form-row">
@@ -3739,6 +3756,18 @@
                 <a class="help-link" href="#autoGearRulesList" data-help-target="#autoGearRulesList">rules list</a>
                 keeps every automation visible with duplicate, reorder and delete controls so you can maintain complex setups
                 quickly.
+              </li>
+              <li>
+                The
+                <a
+                  class="help-link"
+                  href="#autoGearSummary"
+                  data-help-target="#autoGearSummary"
+                  data-help-highlight="#settingsDialog"
+                >Rule coverage overview</a>
+                dashboard surfaces duplicate triggers, potential conflicts, uncovered scenarios and net add/remove counts.
+                Its buttons filter the rules list for offline audits and every export carries the same annotations for
+                printed or shared reports.
               </li>
               <li>
                 <a
